Add iosetup.jl and update examples

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 *.jl.cov
 *.jl.mem
 /docs/build/
+
+
+/docs/Manifest.toml
+Manifest.toml
+
+
+# PDF output - usually a bad idea to keep this in Git
+*.pdf
+.github/workflows/CI.yml
