--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - master
     tags: '*'
   pull_request:
 concurrency:
@@ -19,6 +19,7 @@ jobs:
       matrix:
         version:
           - '1.6'
+          - '1.7'
           - 'nightly'
         os:
           - ubuntu-latest
@@ -34,6 +35,7 @@ jobs:
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
+	continue-on-error: ${{ matrix.version == 'nightly' }}
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v2
         with:
@@ -57,3 +59,4 @@ jobs:
             using Hestia
             DocMeta.setdocmeta!(Hestia, :DocTestSetup, :(using Hestia); recursive=true)
             doctest(Hestia)'
+      - run: julia --project=docs docs/make.jl
