--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "75036a29-a2ca-4eb4-a964-4c35e636f9a9"
 authors = ["Stephan Scholz <stephan.scholz@rwu.de> and contributors"]
 version = "0.2.1"
 
+[deps]
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+
 [compat]
 julia = "1.6"
 
