--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,7 @@ JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 
 [compat]
 julia = "1.6"
-
+JuliaFormatter = "1"
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
